Fix projects list on mobile

--- a/_sass/utilities.scss
+++ b/_sass/utilities.scss
@@ -76,3 +76,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.no-padding-w {
+    padding-left: 0;
+    padding-right: 0;
+}
